

[metadata]
name = condat_tv
keywords=condat_tv
version = 0.0.1
license = "GNU General Public License v3",
description = Cython wrapper for the efficient TV denoising algorithm by Condat
long_description = file: README.rst
author = Marie Roald & Yngve Mardal Moe
author_email = yngve.m.moe@gmail.com
url=https://github.com/yngvem/condat_tv
classifiers=
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =

[options.packages.find]
where=src



[bumpversion]
current_version = 0.0.1
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:condat_tv/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'



[bdist_wheel]
universal = 1



[flake8]
exclude = docs
max-line-length = 88


