

[metadata]
name = condat_tv
version = 0.0.2
license = "GNU General Public License v3",
description = Cython wrapper for the efficient TV denoising algorithm by Condat
long_description = file: README.rst
author = Marie Roald & Yngve Mardal Moe
author_email = yngve.m.moe@gmail.com
url=https://github.com/marieroald/condat_tv
classifiers=
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =

[options.packages.find]
where=src
